syntax = "proto3";
package kratos.api;

option go_package = "interface/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message MongoDB {
    string uri = 1;
    string database = 2;
  }
  message ObjectStorage {
    string bucket = 1;
    string secret_id = 2;
    string secret_key = 3;
    string endpoint = 4;
  }
  Database database = 1;
  Redis redis = 2;
  MongoDB mongodb = 3;
  ObjectStorage object_storage = 4;
}

message Registry {
  message Consul {
      string address = 1;
      string scheme = 2;
  }
  Consul consul = 1;
}
